Retirada do campo de total na tela de orçamento.

--- a/Views/Orcamentos/Details.cshtml
+++ b/Views/Orcamentos/Details.cshtml
@@ -80,7 +80,7 @@
                 <dt class="col-sm-4 fw-semibold">
                     @Html.DisplayNameFor(model => model.total)
                 </dt>
-                <dd class="col-sm-8">
+                <dd class="col-sm-8 fw-bold">
                     @Model.total.ToString("C2")
                 </dd>
 
